# service-mesh

./: .env.example  .gitignore  CNAME  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  monitoring-api-postman-collection.json  openapi.json  pyproject.toml  requirements.txt  start.bat  start.sh  swagger_doc.html
.github/workflows/: deploy.yml  gh-pages.yml
app/: __init__.py  config.py  main.py
app/api/: router.py
app/api/endpoints/: __init__.py  credentials.py  grafana.py  health.py  prometheus.py  proxmox.py  uptime_kuma.py
app/core/: exceptions.py  logging.py
app/database/: base.py  models.py  session.py
app/models/: __init__.py  credentials.py  grafana.py  prometheus.py  proxmox.py  uptime_kuma.py  user.py
app/resources/: uptime_kuma.py
app/services/: credentials_service.py  grafana_service.py  prometheus_service.py  proxmox_service.py  uptime_kuma_service.py
app/templates/html/: index.html  swagger_doc.html
app/utils/: helpers.py
dictionary/uptime_kuma/get_all_monitors_statistics/: response_raw.json  response_transformed.json
migrations/: env.py
scripts/: generate_openapi.py
tests/: conftest.py
tests/integration/: __init__.py  test_grafana_integration.py  test_prometheus_integration.py  test_proxmox_integration.py  test_uptime_kuma_integration.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py
tests/unit/api/endpoints/: __init__.py  test_health.py
tests/unit/services/: __init__.py  test_grafana_service.py  test_prometheus_service.py  test_proxmox_service.py  test_uptime_kuma_service.py
